# fintech-payment-api-platform

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: config.py  db.py  main.py  models.py  pyproject.toml  schemas.py
api/app/routes/: __init__.py  health.py  transactions.py
terraform/: terraform.tf
